Fixes issue where too wide content caused ugly footer

--- a/static/css/default.css
+++ b/static/css/default.css
@@ -392,6 +392,8 @@ Overflow-x: hidden;
 #content {
     position: relative;
     min-width: 460px;
+    min-height: 100%;
+    overflow: hidden;
 }
 
 #mainContent {
